--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="text" id="name1" placeholder="name" /><br /><br />
-    <input type="text" id="password1" placeholder="passowrod" /> <br /><br />
-    <button onclick="login()">login</button>
-    <br /><br /><br /><br />
-    <br /><br />
-    <br /><br />
+    <button onclick="next()">login</button>
 
-    <input type="text" id="name" placeholder="name" /><br /><br />
-    <input type="text" name="" id="email" placeholder="email" /><br /><br />
-    <input type="text" id="password" placeholder="password" /><br /><br />
-    <button onclick="sign()">ragistration</button>
-
-    <script src="java.js"></script>
+    <script>
+      function next() {
+        location.href = "product.html";
+      }
+    </script>
   </body>
 </html>
