--- a/product.html
+++ b/product.html
@@ -5,33 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .card {
-        width: 300px;
-        height: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 200px auto;
-      }
-      .list1 {
-        width: 150px;
-        height: 150px;
-        border-radius: 20px;
-        margin-left: 20px;
-        padding-left: 20px;
-        cursor: pointer;
-      }
-    </style>
+    <style></style>
   </head>
   <body>
-    <div class="card">
-      <img src="ser4.jpg" alt="" height="300px" width="300px" id="img" />
-      <div id="list1" class="list"></div>
-    </div>
+    <input type="text" id="name1" placeholder="name" /><br /><br />
+    <input type="text" id="password1" placeholder="passowrod" /> <br /><br />
+    <button onclick="login()">login</button>
+    <br /><br /><br /><br />
+    <br /><br />
+    <br /><br />
+
+    <input type="text" id="name" placeholder="name" /><br /><br />
+    <input type="text" name="" id="email" placeholder="email" /><br /><br />
+    <input type="text" id="password" placeholder="password" /><br /><br />
+    <button onclick="sign()">ragistration</button>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-storage.js"></script>
-    <script src="product.js"></script>
+    <script src="java.js"></script>
   </body>
 </html>
